feat: implement NPC deletion sync in-game and on web UI

--- a/easy-npc-kracked-ai/src/main/resources/web/index.html
+++ b/easy-npc-kracked-ai/src/main/resources/web/index.html
@@ -347,7 +347,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button id="save-npc-btn" class="btn btn-primary btn-full btn-pixel">Commit Matrix Data</button>
+                        <button id="delete-npc-btn" class="btn btn-danger btn-pixel">Delete Profile</button>
+                        <button id="save-npc-btn" class="btn btn-primary btn-pixel">Commit Matrix Data</button>
                     </div>
                 </div>
             </div>
