feat: enable NPC name editing and refine dashboard UI layout

--- a/easy-npc-kracked-ai/src/main/resources/web/index.html
+++ b/easy-npc-kracked-ai/src/main/resources/web/index.html
@@ -279,25 +279,33 @@
                     </div>
                     <div class="modal-scroll-area">
                         <div class="modal-section">
-                            <div class="switch-group">
-                                <div class="form-group switch-row">
-                                    <label>AI Consciousness</label>
-                                    <label class="switch">
-                                        <input type="checkbox" id="npc-ai-enabled">
-                                        <span class="slider round"></span>
-                                    </label>
+                            <label class="section-label">Identity & Consciousness</label>
+                            <div class="form-group identity-row">
+                                <div class="name-edit-box">
+                                    <label>Designation Name</label>
+                                    <input type="text" id="npc-name-input" placeholder="NPC Name">
                                 </div>
-                                <div class="form-group switch-row">
-                                    <label>Vocal Output</label>
-                                    <label class="switch">
-                                        <input type="checkbox" id="npc-voice-enabled">
-                                        <span class="slider round"></span>
-                                    </label>
+                                <div class="switches-box">
+                                    <div class="form-group switch-row">
+                                        <label>AI</label>
+                                        <label class="switch">
+                                            <input type="checkbox" id="npc-ai-enabled">
+                                            <span class="slider round"></span>
+                                        </label>
+                                        </div>
+                                        <div class="form-group switch-row">
+                                        <label>Voice</label>
+                                        <label class="switch">
+                                            <input type="checkbox" id="npc-voice-enabled">
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="modal-section">
+                            <label class="section-label">Neural Framework</label>
                             <div class="form-group">
                                 <label>Neural Interface</label>
                                 <select id="npc-provider">
